# secret_garden

./: .gitignore  LICENSE  README.md  readme_example.md
secret_garden_front/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
secret_garden_front/src/: App.tsx  main.tsx
secret_garden_front/src/components/: Sidebar.tsx
secret_garden_front/src/components/common/: Modal.tsx  Table.tsx
secret_garden_front/src/types/: client.ts  property.ts
secret_garden_service/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
secret_garden_service/scripts/: README.md
secret_garden_service/scripts/database/: close_connections.py  db_reset.py  db_tools.py  update_schema.py
secret_garden_service/src/secret_garden/api/: app.py  main.py
secret_garden_service/src/secret_garden/api/routers/: bank_returns.py  clients.py  health.py  monthly_calculations.py  monthly_transfers.py  monthly_variable_values.py  owners.py  retornos.py
secret_garden_service/src/secret_garden/cli/: __init__.py  db_viewer.py  run.py  sqlite_viewer.py
secret_garden_service/src/secret_garden/database/: config.py  init_db.py  models.py  seed.py
secret_garden_service/src/secret_garden/models/: bank_return.py  client.py  monthly_calculation.py  monthly_variable_values.py  owner.py  retorno_pagamento.py
secret_garden_service/src/secret_garden/services/: bank_return_service.py  client_service.py  monthly_calculation_service.py  monthly_transfer_service.py  monthly_variable_values_service.py  retorno_service.py
(+21 files in other folders)
